hsds/templates/arctic-minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arctic-minio-service
  namespace: hsds
spec:
  selector:
    app: arctic-minio
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9000
