hsds/templates/arctic-minio/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: prop3d-arctic-minio-nginx-ingress
  namespace: prop3d
spec:
  rules:
  - host: prop3d-arctic-minio.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prop3d-arctic-minio-service
            port:
              number: 8080
  - host: prop3d-arctic-minio.uvadcos.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prop3d-arctic-minio-service
            port:
              number: 8080
